GN-221 Fix illegible text on current page (#228)

--- a/src/Header/Nav/NavLinks/NavLinks.module.scss
+++ b/src/Header/Nav/NavLinks/NavLinks.module.scss
@@ -32,6 +32,7 @@ button.link {
   }
 
   &[aria-current='true'],
+  &[aria-current='page'],
   &:hover {
     color: $nav-link-hover-text !important;
   }
